# VaultLearn

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
Backend/: Dockerfile.backend  main.py  pyproject.toml  requirements.txt  sessions.db  visualize.ipynb
Backend/agent/: graph.py  nodes.py  state.py
Backend/api/: main.py
Backend/memory/: vault.py
Backend/rag/: retriever.py
Backend/vault/: Fastapi Study Plan_review.md  Fastapi Study Plan_session.md  Fastapi Study Plan_struggles.md  LangGraph Study Plan_review.md  React Study Plan_review.md  Structured Learning Plan for React_struggles.md
Backend/vault/.obsidian/: workspace.json
agent/: graph.py  nodes.py  session_graph.py  state.py
api/: main.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.jsx
rag/: chunker.py  fetcher.py
schemas/: models.py
tests/: test_fetcher.py
vault/: Go Study Plan_review.md  Go Study Plan_session.md  Go Study Plan_struggles.md  LangGraph Study Plan_session.md  LangGraph Study Plan_struggles.md  React Study Plan_session.md  React Study Plan_struggles.md  Structured Learning Plan for React_review.md  Structured Learning Plan for React_session.md  test_note.md
vault/.obsidian/: workspace.json
