[project]
name = "vaultlearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "fastapi>=0.138.0",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "lxml>=6.1.1",
    "markdownify>=1.2.2",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
